src/components/Checkbox.scss
@import '~@nti/style-common';

label.checkbox-component {
	line-height: 1; // fixes a safari issue where clicking the label doesn't affect the checkbox
	input[type='checkbox'] {
		opacity: 0;
		position: absolute;

		& + span.label {
			position: relative;

			//
			//override foundation's '.label'
			background: inherit;
			color: inherit;
			padding-left: 0;
			line-height: inherit;

			// May be necessary to keep labels with links clickable?
			// iOS workaround?
			// pointer-events: none;
			// a { pointer-events: all; }

			&::before {
				content: '';
				position: absolute;
				top: rem-calc(1px);
				left: rem-calc(-26px);
				width: 16px;
				height: 16px;
				background: transparent center/100% no-repeat;

				@include retina-asset('./assets/checkbox/base', $xCount: 3);
			}
		}

		&:checked + span.label::before {
			background-image: url(./assets/checkbox/select.png);
			// @include retina-asset('./assets/checkbox/select', $xCount: 3);
		}

		&:checked + span.label.green::before {
			@include retina-asset('./assets/checkbox/select-green', $xCount: 3);
		}

		&:disabled + span.label {
			opacity: 0.5;
			pointer-events: none;

			&::before {
				opacity: 0.5;
			}
		}
	}

	//reset foundation's 'label' & '.label'
	&, & span.label {
		font-weight: inherit;
		font-size: inherit;
		font-style: inherit;
	}

	input + span.label,
	div.sub {
		margin-left: 1.625rem;
	}

	// html:not(.touch) &:hover {
	// 	input[type=checkbox] {
	// 		& + span.label::before {
	// 			@include retina-asset('./assets/checkbox/hover', $xCount: 3);
	// 		}
	//
	// 		&:checked + span.label::before {
	// 			@include retina-asset('./assets/checkbox/hover-select', $xCount: 3);
	// 		}
	// 	}
	// }
}

